[gd_scene load_steps=4 format=3 uid="uid://11ygylndhtf0"]

[ext_resource type="Theme" uid="uid://chvdfaqu3vjd2" path="res://resources/themes/main_theme.tres" id="1_mrxl8"]
[ext_resource type="Script" path="res://scripts/ai_speech_menu_ui.gd" id="2_k6mt3"]
[ext_resource type="Texture2D" uid="uid://dkx7y21vllugm" path="res://assets/military_helmet.png" id="3_pvdr6"]

[node name="AISpeechMenuUI" type="MarginContainer"]
offset_right = 647.0
offset_bottom = 1080.0
size_flags_vertical = 3
theme = ExtResource("1_mrxl8")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
script = ExtResource("2_k6mt3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_pvdr6")
stretch_mode = 3

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="RegularMessageLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"HeaderMedium"
text = "Regular message"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Control2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="AdditionalMessageLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"HeaderMedium"
text = "Additional info"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
